29-02-2005 Qball <qball@qballcow.nl>
	* src/preferences.c/glade:	Added support for changing browser
	markup.
	* src/tray-icon.c:		playlist is now also hidden with click
	on tray icon.

28-02-2005 Qball <qball@qballcow.nl>
	* src/main.c/preferences.c:		Support for enable/disable hide on startup.
	* src/main.c:		On exit clean some stuff up. (mpdObj and
	config obj )
	* src/config1.c:	Make close function that cleans up.
	* src/playlist3.c:	Fixed gtk_list_store_new..  wrongly defined.
	(how the hell did it work)
	* src/main.c:		Added stock yalign to list_store.
	* src/playlist3.c:	Icon next to song is now alligned to the top.
	* src/main.c:		Fixed memory leak in changed playlist.
	(freeing of path string);
	* src/libmpd.c:		Fixed memory leak in _free_data and free_queu
	function. (didn't start at the beginnning);
	* src/tray-icon.c:	Fixed memory leak in popup. (nasty fix,  why
	does gtk doc provide a wrong example)
	* src/tray-icon.c:	The popup timeout now follows setting.
	* src/tray-icon.c:	Added the option to fade the popup in. (fake
	transparant.)
	* src/preferences.c:	Added fade-in for popup option.

26-02-2005 Qball <qball@qballcow.nl>
	* glade/preferences.glade:	Cleaned up layout a bit.
	* fixed not free'ed memory from config

25-02-2005 Qball <Qball@qballcow.nl>
	* started working on format editor
	* src/preferences.[c|glade]: Now uses the format editor for the
	playlist and player string.
	* src/main.c:		error window forced to one instance.
	* src/player.c:		time box now resizes with font size.. (width
	and height) title box only height.
	* src/preferences.c:	output isn't hidden when not availible but
	made insensitive

24-02-2005 Qball <Qball@qballcow.nl>
	* cleaned up some compile warnings.. (and all // comment )
	* src/playlist.c:	Fixed problem not loading song as if it where
	a playlist.
	* src/playlist.c:	Fixed problem with id3 info



23-02-2005 Qball <Qball@qballcow.nl>
	* glade/gmpc.glade:	Added Playlist tab + obtions